manifests/manifests/external/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plarail2021-soft-backend-external
  namespace: plarail2021
spec:
  selector:
    matchLabels:
      app: plarail2021-soft-backend-external
  template:
    metadata:
      labels:
        app: plarail2021-soft-backend-external
    spec:
      containers:
        - name: plarail2021-soft-backend-external
          image: ghcr.io/ueckoken/plarail2021-soft-external:0b2a5b7-1636897766 # {"$imagepolicy": "plarail2021:external"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
