manifests/manifests/external/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plarail2021-soft-backend-external
  namespace: plarail2021
  labels:
    app: plarail2021-soft-backend-external
spec:
  type: NodePort
  selector:
    app: plarail2021-soft-backend-external
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
